# Normie-AI

./: .gitignore  CLAUDE.md  README.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  playwright.config.ts  server.js
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/middleware/: api_key.py  auth.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 001_initial.py  002_subscriptions.py  003_web_auth.py  004_api_keys.py  005_stripe_customer_id.py  006_google_auth.py  007_cleanup_test_users.py  008_email_unique_constraint.py  009_password_reset_fields.py  010_room_participant_read_state.py
backend/app/models/: __init__.py  api_key.py  credit.py  message.py  room.py  transcript.py  user.py
backend/app/routers/: analytics.py  api_v1.py  auth.py  credits.py  messages.py  pages.py  rooms.py  stripe_checkout.py  stripe_webhooks.py  transcripts.py  translate.py  users.py  ws.py
backend/app/routers/integrations/: __init__.py  base.py  discord.py  slack.py  telegram.py
backend/app/schemas/: api_key.py  auth.py  credits.py  message.py  room.py  transcript.py  translate.py  user.py
backend/app/scripts/: __main__.py  audit_credits.py  probe_auth.py  reconcile_stripe.py  verify_deploy.py
backend/app/services/: apple_auth.py  apple_storekit.py  claude_translate.py  connection_manager.py  credit_manager.py  email_service.py  stripe_service.py
backend/app/static/: manifest.json
backend/app/templates/: base.html
backend/app/utils/: sanitize.py
(+75 files in other folders)
